# WSIMC

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  demo-web.html  launch.ps1
tauri-app/: README.md  index.html  launch.ps1  package.json  tailwind.config.js
tauri-app/src/: App.tsx  App_backup.tsx  App_new.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/icons/: create_icon.ps1
tauri-app/src-tauri/src/: main.rs  main_fixed.rs
tauri-app/src/components/: Charts.tsx  ProcessPage.tsx  ProcessWindow.tsx
tauri-app/src/services/: dataCache.ts
